--- a/components/profile-controller/Makefile
+++ b/components/profile-controller/Makefile
@@ -1,6 +1,6 @@
 PROJECT ?= kubeflow-dev
 # Image URL to use all building/pushing image targets
-IMG ?= gcr.io/$(PROJECT)/profile-controller
+IMG ?= xpacrdemo.azurecr.io/$(PROJECT)/profile-controller
 TAG ?= $(eval TAG := $(shell date +v%Y%m%d)-$(shell git describe --tags --always --dirty)-$(shell git diff | shasum -a256 | cut -c -6))$(TAG)
 GOLANG_VERSION ?= 1.12.5
 
